Update dependencies and add workshop utilities for environment validation

--- a/01-single-agents/01.1-single-agents.ipynb
+++ b/01-single-agents/01.1-single-agents.ipynb
@@ -58,35 +58,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "setup-validation",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Setup validated! All required environment variables are set.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import os\n",
-    "from dotenv import load_dotenv\n",
+    "import sys\n",
+    "sys.path.insert(0, '..')  # Add parent directory to path\n",
     "\n",
-    "# Load environment variables from .env file\n",
-    "load_dotenv()\n",
+    "from workshop_utils import validate_env\n",
     "\n",
-    "# Required environment variables\n",
-    "required_vars = [\n",
-    "    \"AZURE_OPENAI_ENDPOINT\",\n",
-    "    \"AZURE_OPENAI_API_KEY\",\n",
-    "    \"AZURE_OPENAI_API_VERSION\",\n",
-    "    \"AZURE_OPENAI_CHAT_DEPLOYMENT_NAME\"\n",
-    "]\n",
-    "\n",
-    "# Validate setup\n",
-    "missing = [var for var in required_vars if not os.getenv(var)]\n",
-    "\n",
-    "if missing:\n",
-    "    print(\"Missing required environment variables:\")\n",
-    "    for var in missing:\n",
-    "        print(f\"  - {var}\")\n",
-    "    print(\"\\nPlease create a .env file with these variables or set them in your environment.\")\n",
-    "else:\n",
-    "    print(\"Setup validated! All required environment variables are set.\")"
+    "validate_env()"
    ]
   },
   {
