--- a/02-workflows/02.2-orchestrations.ipynb
+++ b/02-workflows/02.2-orchestrations.ipynb
@@ -12,24 +12,49 @@
     "\n",
     "- Assign distinct skills, responsibilities, or perspectives to each agent.\n",
     "- Combine outputs from multiple agents to improve decision-making and accuracy.\n",
-    "- Coordinate steps in a workflow so each agent’s work builds on the last.\n",
+    "- Coordinate steps in a workflow so each agent\u2019s work builds on the last.\n",
     "- Dynamically route control between agents based on context or rules.\n",
     "\n",
     "**Orchestrations** are pre-built workflow patterns that allow developers to quickly create complex workflows by simply plugging in their own AI agents. Instead of manually wiring every edge, you can use these patterns to define how agents interact.\n",
     "\n",
     "Because all patterns share the same core interface, you can easily experiment with different orchestration strategies without rewriting agent logic or learning new APIs. The SDK abstracts the complexity of agent communication, coordination, and result aggregation so you can focus on designing workflows that deliver results.\n",
     "\n",
-    "Agent Framework provides four orchestration patterns:\n",
+     "Agent Framework provides five orchestration patterns:\n",
+     "\n",
+     "1. **Sequential** - Agents execute one after another in a defined order, ideal for linear processing\n",
+     "2. **Concurrent** - Broadcast the same task to multiple agents at once and collect results independently.\n",
+     "3. **Handoff** - Control is dynamically transferred from one agent to another based on context or role.\n",
+     "4. **Group chat** - Coordinate a shared conversation among multiple agents managed by a chat manager that decides who speaks next and when to stop.\n",
+     "5. **Magentic** - Manager-driven approach where agents dynamically pull tasks based on the evolving context, task progress, and agent capabilities.\n",
+     "\n",
+     "Refer to the [Agent Framework documentation](https://learn.microsoft.com/en-us/agent-framework/user-guide/workflows/orchestrations/overview) to learn more about these orchestration types and check out the [Agent Framework repo](https://github.com/microsoft/agent-framework/tree/main/python/samples/getting_started/workflows/orchestration) to see more advanced orchestration types in action.\n",
+     "\n",
+     "In this notebook, we'll cover **Sequential**, **Concurrent**, and **Group Chat** orchestrations in detail. Handoff and Magentic are introduced in the exercise section with links to documentation and samples."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "setup-header",
+   "metadata": {},
+   "source": [
+    "### Setup\n",
     "\n",
-    "1. **Sequential** - Agents execute one after another in a defined order, ideal for linear processing\n",
-    "2. **Concurrent** - Broadcast the same task to multiple agents at once and collect results independently.\n",
-    "3. **Handoff** - Control is dynamically transferred from one agent to another based on context or role.\n",
-    "4. **Group chat** - Coordinate a shared conversation among multiple agents managed by a chat manager that decides who speaks next and when to stop.\n",
-    "4. **Magentic** - Manager-driven approach where agents dynamically pull tasks based on the evolving context, task progress, and agent capabilities.\n",
+    "First, let's validate our environment and create the Azure OpenAI client."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "setup-validation",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.insert(0, '..')  # Add parent directory to path\n",
     "\n",
-    "Refer to the [Agent Framework documentation](https://learn.microsoft.com/en-us/agent-framework/user-guide/workflows/orchestrations/overview) to learn more about these orchestration types and check out the [Agent Framework repo](https://github.com/microsoft/agent-framework/tree/main/python/samples/getting_started/workflows/orchestration) to see more advanced orchestration types in action.\n",
+    "from workshop_utils import validate_env\n",
     "\n",
-    "In this following sections, we’ll introduce Sequential, Concurrent and Group Chat orchestrations:"
+    "validate_env()"
    ]
   },
   {
@@ -40,34 +65,30 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "from dotenv import load_dotenv\n",
     "from agent_framework.azure import AzureOpenAIChatClient\n",
     "\n",
-    "load_dotenv()\n",
-    "endpoint = os.getenv(\"AZURE_OPENAI_ENDPOINT\")\n",
-    "api_key = os.getenv(\"AZURE_OPENAI_API_KEY\")\n",
-    "api_version = os.getenv(\"AZURE_OPENAI_API_VERSION\")\n",
-    "deployment = os.getenv(\"AZURE_OPENAI_CHAT_DEPLOYMENT_NAME\")\n",
+    "chat_client = AzureOpenAIChatClient(\n",
+    "    endpoint=os.getenv(\"AZURE_OPENAI_ENDPOINT\"),\n",
+    "    api_key=os.getenv(\"AZURE_OPENAI_API_KEY\"),\n",
+    "    api_version=os.getenv(\"AZURE_OPENAI_API_VERSION\"),\n",
+    "    deployment_name=os.getenv(\"AZURE_OPENAI_CHAT_DEPLOYMENT_NAME\"),\n",
+    ")\n",
     "\n",
-    "chat_client=AzureOpenAIChatClient(\n",
-    "        endpoint=endpoint,\n",
-    "        api_key=api_key,\n",
-    "        api_version=api_version,\n",
-    "        deployment_name=deployment,\n",
-    "    )"
+    "print(\"Client created successfully!\")"
    ]
   },
-  {
-   "cell_type": "markdown",
-   "id": "6b5d81ea",
-   "metadata": {},
-   "source": [
-    "### Example of Sequential Orchestration\n",
-    "In sequential orchestration, agents are organized in a pipeline. Each agent processes the task in turn, passing its output to the next agent in the sequence. This is ideal for workflows where each step builds upon the previous one, such as document review, data processing pipelines, or multi-stage reasoning.\n",
-    "\n",
-    "The `SequentialBuilder` class creates a pipeline where agents process tasks in order. Each agent sees the full conversation history and adds their response."
-   ]
-  },
+   {
+    "cell_type": "markdown",
+    "id": "sequential-orchestration-header",
+    "metadata": {},
+    "source": [
+     "## Sequential Orchestration\n",
+     "\n",
+     "In sequential orchestration, agents are organized in a pipeline. Each agent processes the task in turn, passing its output to the next agent in the sequence. This is ideal for workflows where each step builds upon the previous one, such as document review, data processing pipelines, or multi-stage reasoning.\n",
+     "\n",
+     "The `SequentialBuilder` class creates a pipeline where agents process tasks in order. Each agent sees the full conversation history and adds their response."
+    ]
+   },
   {
    "cell_type": "code",
    "execution_count": null,
@@ -198,7 +219,7 @@
     "\n",
     "**Group chat orchestration** models a collaborative conversation among multiple AI agents and optionally a human participant. A central chat manager controls the flow and decides which agent responds next or when to request human input.\n",
     "\n",
-    "Group chat is ideal for iterative refinement, debate, and multi‑perspective problem solving where agents share the same conversation context and can build on each other’s outputs.\n",
+    "Group chat is ideal for iterative refinement, debate, and multi\u2011perspective problem solving where agents share the same conversation context and can build on each other\u2019s outputs.\n",
     "\n",
     "**Core parts of Group chat orchestration:**\n",
     "1. **Agents**\n",
@@ -207,12 +228,12 @@
     "\n",
     "2. `GroupChatBuilder()`\n",
     "\n",
-    "Fluent API to assemble a group chat with participants, speaker selection strategy or a prompt‑based manager.\n",
+    "Fluent API to assemble a group chat with participants, speaker selection strategy or a prompt\u2011based manager.\n",
     "\n",
     "3. `GroupChatStateSnapshot`\n",
     "    - Immutable snapshot that contains the following:\n",
     "        - task: `ChatMessage` - original user task\n",
-    "        - participants: `dict[str, str]` - participant names → descriptions\n",
+    "        - participants: `dict[str, str]` - participant names \u2192 descriptions\n",
     "        - conversation: `tuple[ChatMessage, ...]` - full conversation history\n",
     "        - history: `tuple[GroupChatTurn, ...]` - turn-by-turn with speaker attribution\n",
     "        - round_index: `int` - number of selection rounds so far\n",
@@ -222,7 +243,7 @@
     "\n",
     "4. **Selection Strategy**\n",
     "\n",
-    "The policy that decides who speaks next each turn. You can choose between deterministic code‑based selection or use the default AI‑managed selection. The latter uses the default group chat orchestration pipeline shared with Magentic, so you benefit from established patterns for iterative collaboration and stopping criteria without writing orchestration glue.\n",
+    "The policy that decides who speaks next each turn. You can choose between deterministic code\u2011based selection or use the default AI\u2011managed selection. The latter uses the default group chat orchestration pipeline shared with Magentic, so you benefit from established patterns for iterative collaboration and stopping criteria without writing orchestration glue.\n",
     "To add an AI-powered manager, just provide the chat client in the workflow definition:\n",
     "```python\n",
     "    workflow = (\n",
@@ -245,7 +266,7 @@
     "Key Objectives:\n",
     "- Implement a deterministic `select_speakers()` tool that takes a `GroupChatStateSnapshot` and returns the next participant.\n",
     "- Understand the state fields you can use for decisions: task, participants, conversation, history, round_index, pending_agent.\n",
-    "- Event‑driven observability with streaming, event handling and middleware.\n",
+    "- Event\u2011driven observability with streaming, event handling and middleware.\n",
     "\n",
     "First, let's create and provide detailed instructions for the agents:"
    ]
@@ -407,7 +428,7 @@
    "source": [
     "### Exercise - create your own orchestration pattern scenario\n",
     "\n",
-    "Now that you’ve explored and tested a few orchestration examples, let's apply what you’ve learned. Think about a real-world domain or business logic case, such as customer support, reporting, knowledge work automation or any process relevant to your context. Your goal is to implement your own orchestration that reflects this scenario using the concepts and patterns introduced earlier.\n",
+    "Now that you\u2019ve explored and tested a few orchestration examples, let's apply what you\u2019ve learned. Think about a real-world domain or business logic case, such as customer support, reporting, knowledge work automation or any process relevant to your context. Your goal is to implement your own orchestration that reflects this scenario using the concepts and patterns introduced earlier.\n",
     "\n",
     "**Typical flow for building a multi-agent orchestration**\n",
     "1. Clearly define your agents and describe their roles and capabilities.\n",
@@ -417,7 +438,7 @@
     "5. Invoke the orchestration with your chosen task.\n",
     "6. Retrieve results asynchronously for non-blocking, real-time feedback.\n",
     "\n",
-    "Alternatively, you can also experiment with advanced patterns like Handoff or Magentic orchestration which we haven’t covered. Feel free to explore these approaches using the additional documentation and resources:\n",
+    "Alternatively, you can also experiment with advanced patterns like Handoff or Magentic orchestration which we haven\u2019t covered. Feel free to explore these approaches using the additional documentation and resources:\n",
     "- [Handoff Documentation](https://learn.microsoft.com/en-us/agent-framework/user-guide/workflows/orchestrations/handoff?pivots=programming-language-python)\n",
     "- [Github Handoff Samples](https://github.com/microsoft/agent-framework/blob/main/python/samples/getting_started/workflows/orchestration/handoff_simple.py)\n",
     "- [Magentic Docs](https://learn.microsoft.com/en-us/agent-framework/user-guide/workflows/orchestrations/magentic?pivots=programming-language-python)\n",
@@ -440,7 +461,7 @@
     "\n",
     "# 3. Select & create an orchestration pattern\n",
     "\n",
-    "# 4. Configure callbacks/transforms, add executors and consider obsevability \n",
+    "# 4. Configure callbacks/transforms, add executors and consider observability \n",
     "\n",
     "# 5. Define and invoke the orchestration with your chosen task\n",
     "\n",
@@ -473,11 +494,70 @@
     "4. **Handoff**:\n",
     "    - Tasks need specialized knowledge or tools, but the number or order of agents can't be determined in advance.\n",
     "    - Expertise requirements emerge dynamically during processing, triggering task routing based on content analysis.\n",
-    "    - Multiple-domain problems require different specialists working sequentially."
-   ]
-  }
- ],
- "metadata": {
+     "    - Multiple-domain problems require different specialists working sequentially."
+    ]
+   },
+   {
+    "cell_type": "markdown",
+    "id": "summary-recap",
+    "metadata": {},
+    "source": [
+     "---\n",
+     "## Summary & Recap\n",
+     "\n",
+     "In this notebook, you learned about pre-built orchestration patterns in the Microsoft Agent Framework:\n",
+     "\n",
+     "### Key Concepts\n",
+     "\n",
+     "| Orchestration | Description |\n",
+     "|---------------|-------------|\n",
+     "| **Sequential** | Agents execute one after another in a pipeline, each building on the previous output |\n",
+     "| **Concurrent** | Multiple agents work on the same task in parallel, results are aggregated |\n",
+     "| **Group Chat** | Collaborative conversation with a chat manager controlling speaker selection |\n",
+     "| **Handoff** | Dynamic control transfer between agents based on context |\n",
+     "| **Magentic** | Manager-driven approach where agents pull tasks based on evolving context |\n",
+     "\n",
+     "### What You Built\n",
+     "\n",
+     "1. **Sequential Pipeline** - Meal planner and budget estimator working in sequence\n",
+     "2. **Concurrent Workflow** - Researcher, marketer, and legal agents processing in parallel\n",
+     "3. **Group Chat** - Writer, editor, and researcher with custom speaker selection\n",
+     "\n",
+     "### Key Patterns\n",
+     "\n",
+     "```python\n",
+     "# Sequential orchestration\n",
+     "workflow = SequentialBuilder().participants([agent1, agent2]).build()\n",
+     "\n",
+     "# Concurrent orchestration\n",
+     "workflow = ConcurrentBuilder().participants([agent1, agent2, agent3]).build()\n",
+     "\n",
+     "# Group chat with custom speaker selection\n",
+     "def select_speaker(state: GroupChatStateSnapshot) -> str | None:\n",
+     "    # Custom logic to determine next speaker\n",
+     "    return next_agent_name\n",
+     "\n",
+     "workflow = (\n",
+     "    GroupChatBuilder()\n",
+     "    .select_speakers(select_speaker, display_name=\\\"Orchestrator\\\")\n",
+     "    .participants([agent1, agent2, agent3])\n",
+     "    .build()\n",
+     ")\n",
+     "```\n",
+     "\n",
+     "### Chapter 2 Complete!\n",
+     "\n",
+     "You now have the skills to build sophisticated multi-agent systems with:\n",
+     "- Custom workflows with executors and edges (02.1)\n",
+     "- Agents as workflow components (02.1)\n",
+     "- Pre-built orchestration patterns (02.2)\n",
+     "- Event-driven observability and streaming (02.1, 02.2)\n",
+     "\n",
+     "In **Chapter 3**, you'll learn about **RAG (Retrieval-Augmented Generation)** to give your agents access to external knowledge!"
+    ]
+   }
+  ],
+  "metadata": {
   "kernelspec": {
    "display_name": "maf-workshop",
    "language": "python",
