Refactor agent creation method in notebooks and server code to use `as_agent()` instead of `create_agent()`. Update notebook content for clarity and consistency, including setup validation and workflow explanations.

--- a/01-single-agents/01.1-single-agents.ipynb
+++ b/01-single-agents/01.1-single-agents.ipynb
@@ -58,28 +58,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "setup-validation",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Setup validated! All required environment variables are set.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.insert(0, '..')  # Add parent directory to path\n",
@@ -129,7 +111,7 @@
     "```\n",
     "\n",
     "\n",
-    "Below is an example of using a convenience method `create_agent()` for creating a ChatAgent tied to our Azure OpenAI Chat Completion client:"
+    "Below is an example of using a convenience method `as_agent()` for creating a ChatAgent tied to our Azure OpenAI Chat Completion client:"
    ]
   },
   {
@@ -139,9 +121,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "simple_agent = client.create_agent(\n",
+    "simple_agent = client.as_agent(\n",
     "    instructions=\"You are an AI assistant that helps users with their questions.\",\n",
-    "    name=\"AI Assistant\"\n",
+    "    name=\"AI_Assistant\"\n",
     ")"
    ]
   },
@@ -208,9 +190,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "agent = client.create_agent(\n",
+    "agent = client.as_agent(\n",
     "    instructions=\"You are an AI assistant that helps users with their questions.\",\n",
-    "    name=\"AI Assistant\"\n",
+    "    name=\"AI_Assistant\"\n",
     ")\n",
     "\n",
     "# create a thread for the agent instance:\n",
@@ -410,7 +392,7 @@
     "tools = NotesTools()\n",
     "\n",
     "# create agent with tools\n",
-    "agent = client.create_agent(\n",
+    "agent = client.as_agent(\n",
     "    instructions=\"You are an assistant that logs, stores notes and shows them. Everything i send is a note i want you to log in my notebook.\",\n",
     "    tools=[tools.write_note, tools.list_notes]\n",
     ")\n",
@@ -575,7 +557,7 @@
     "# Create agent with tools\n",
     "tools = TaskManagerTools()\n",
     "\n",
-    "agent = client.create_agent(\n",
+    "agent = client.as_agent(\n",
     "    instructions=\"You are a helpful and precise assistant that manages tasks with priorities and deadlines.\",\n",
     "    tools=[tools.add_task, tools.list_tasks, tools.filter_by_priority]\n",
     ")\n",
@@ -654,7 +636,7 @@
     "    await next(context)     # executes the agent logic\n",
     "    print(f\"[Agent] AFTER execution | Agent output: {context.result}\")\n",
     "\n",
-    "agent = client.create_agent(\n",
+    "agent = client.as_agent(\n",
     "    name=\"TimeAgent\",\n",
     "    instructions=\"You can tell the current time.\",\n",
     "    tools=[get_time],    \n",
@@ -782,7 +764,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "agent = client.create_agent(\n",
+    "agent = client.as_agent(\n",
     "    instructions=\"\"\"\n",
     "    You control and manage smart lights.\n",
     "    - Check previous states to check if an action needs to be taken\n",
@@ -862,7 +844,7 @@
     "    # TODO: Log AFTER function execution with duration and result\n",
     "\n",
     "\n",
-    "agent = client.create_agent(\n",
+    "agent = client.as_agent(\n",
     "    instructions=\"\"\"\n",
     "    You control and manage smart lights.\n",
     "    - Check previous states to check if an action needs to be taken\n",
@@ -933,7 +915,7 @@
     "    logger.info(f\"[Function] Completed \\\"{context.function.name}\\\" in {duration:.6f}s | Result: {context.result}\")\n",
     "\n",
     "\n",
-    "agent = client.create_agent(\n",
+    "agent = client.as_agent(\n",
     "    instructions=\"\"\"\n",
     "    You control and manage smart lights.\n",
     "    - Check previous states to check if an action needs to be taken\n",
@@ -973,7 +955,7 @@
     "\n",
     "### What You Built\n",
     "\n",
-    "1. **Basic Agent** - A simple Q&A agent using `client.create_agent()`\n",
+    "1. **Basic Agent** - A simple Q&A agent using `client.as_agent()`\n",
     "2. **Multi-turn Conversations** - Used `AgentThread` to maintain context across messages\n",
     "3. **Function Tools** - Created tool classes (`NotesTools`, `LightsTools`, `TaskManagerTools`) with annotated parameters\n",
     "4. **Middleware Pipeline** - Added logging at agent, function, and chat levels\n",
@@ -982,7 +964,7 @@
     "\n",
     "```python\n",
     "# Creating an agent\n",
-    "agent = client.create_agent(\n",
+    "agent = client.as_agent(\n",
     "    instructions=\"Your system prompt here\",\n",
     "    tools=[your_function, tool_instance.method]\n",
     ")\n",
