--- a/01-single-agents/01.2-single-agent-mcp.ipynb
+++ b/01-single-agents/01.2-single-agent-mcp.ipynb
@@ -140,7 +140,7 @@
     "from agent_framework import MCPStreamableHTTPTool\n",
     "\n",
     "# Create an agent for documentation queries\n",
-    "docs_agent = client.create_agent(\n",
+     "docs_agent = client.as_agent(\n",
     "    name=\"DocsAgent\",\n",
     "    instructions=\"You are a helpful assistant that answers questions using Microsoft documentation.\"\n",
     ")\n",
@@ -247,9 +247,9 @@
    "source": [
     "from agent_framework import MCPStreamableHTTPTool\n",
     "\n",
-    "# TODO: Create a customer service agent using client.create_agent()\n",
+     "# TODO: Create a customer service agent using client.as_agent()\n",
     "# Give it a name and instructions for helping customers\n",
-    "agent = client.create_agent(\n",
+     "agent = client.as_agent(\n",
     "    name=\"...\",\n",
     "    instructions=\"...\"\n",
     ")\n",
@@ -282,7 +282,7 @@
     "from agent_framework import MCPStreamableHTTPTool\n",
     "\n",
     "# Create a customer service agent\n",
-    "agent = client.create_agent(\n",
+     "agent = client.as_agent(\n",
     "    name=\"CustomerServiceAgent\",\n",
     "    instructions=\"You are a helpful customer service agent. Use the available tools to look up customer information and assist with their needs.\"\n",
     ")\n",
@@ -335,7 +335,7 @@
     "from agent_framework import MCPStreamableHTTPTool\n",
     "\n",
     "# Create the agent\n",
-    "agent = client.create_agent(\n",
+     "agent = client.as_agent(\n",
     "    name=\"CustomerServiceAgent\",\n",
     "    instructions=\"\"\"You are a customer service agent for Contoso. \n",
     "    Use the available tools to help customers with their accounts.\n",
@@ -385,7 +385,7 @@
     "from agent_framework import MCPStreamableHTTPTool\n",
     "\n",
     "# Create the agent\n",
-    "agent = client.create_agent(\n",
+     "agent = client.as_agent(\n",
     "    name=\"CustomerServiceAgent\",\n",
     "    instructions=\"\"\"You are a customer service agent for Contoso. \n",
     "    Use the available tools to help customers with their accounts.\n",
