--- a/02-workflows/02.2-orchestrations.ipynb
+++ b/02-workflows/02.2-orchestrations.ipynb
@@ -100,14 +100,14 @@
     "from agent_framework import SequentialBuilder, ChatMessage, Role\n",
     "\n",
     "# 1) Create agents from chat_client:\n",
-    "meal_planner = chat_client.create_agent(\n",
+    "meal_planner = chat_client.as_agent(\n",
     "    instructions=(\n",
     "        \"You are a meal planner. Suggest a simple, healthy weekly meal plan for breakfast, lunch, and dinner.\"\n",
     "    ),\n",
     "    name=\"meal_planner\",\n",
     ")\n",
     "\n",
-    "budget_estimator = chat_client.create_agent(\n",
+    "budget_estimator = chat_client.as_agent(\n",
     "    instructions=(\n",
     "        \"You are a budget estimator. Calculate an approximate total cost for the 7-day meal plan provided by the previous assistant.\"\n",
     "    ),\n",
@@ -163,7 +163,7 @@
     "async def main() -> None:\n",
     "    # 1) Create three domain agents using AzureOpenAIChatClient\n",
     "\n",
-    "    researcher = chat_client.create_agent(\n",
+    "    researcher = chat_client.as_agent(\n",
     "        instructions=(\n",
     "            \"You're an expert market and product researcher. Given a prompt, provide concise, factual insights,\"\n",
     "            \" opportunities, and risks.\"\n",
@@ -171,7 +171,7 @@
     "        name=\"researcher\",\n",
     "    )\n",
     "\n",
-    "    marketer = chat_client.create_agent(\n",
+    "    marketer = chat_client.as_agent(\n",
     "        instructions=(\n",
     "            \"You're a creative marketing strategist. Craft compelling value propositions and target messaging\"\n",
     "            \" aligned to the prompt.\"\n",
@@ -179,7 +179,7 @@
     "        name=\"marketer\",\n",
     "    )\n",
     "\n",
-    "    legal = chat_client.create_agent(\n",
+    "    legal = chat_client.as_agent(\n",
     "        instructions=(\n",
     "            \"You're a cautious legal/compliance reviewer. Highlight constraints, disclaimers, and policy concerns\"\n",
     "            \" based on the prompt.\"\n",
@@ -287,7 +287,7 @@
     "    await next(context)   \n",
     "    print(f\"[{context.agent.name} Agent] FINISHED\")\n",
     "\n",
-    "writer = chat_client.create_agent(\n",
+    "writer = chat_client.as_agent(\n",
     "    name=\"Writer\",\n",
     "    instructions=\"\"\"\n",
     "    You are a creative writer crafting engaging content.\n",
@@ -303,7 +303,7 @@
     "    middleware=[logging_agent_middleware]\n",
     ")\n",
     "\n",
-    "editor = chat_client.create_agent(\n",
+    "editor = chat_client.as_agent(\n",
     "    name=\"Editor\",\n",
     "    instructions=\"\"\"\n",
     "    You are an editor focused on clarity and quality.\n",
@@ -320,7 +320,7 @@
     ")\n",
     "\n",
     "\n",
-    "researcher = chat_client.create_agent(\n",
+    "researcher = chat_client.as_agent(\n",
     "    name=\"Researcher\",\n",
     "    instructions=\"\"\"\n",
     "    You provide accurate, relevant research.\n",
