--- a/03-rag/03.1-rag-agent.ipynb
+++ b/03-rag/03.1-rag-agent.ipynb
@@ -257,7 +257,7 @@
     "# Initialize the search tool for the agent providing the search client\n",
     "tools = AzureAISearchTool(search_client=search_client)\n",
     "\n",
-    "agent = client.create_agent(\n",
+    "agent = client.as_agent(\n",
     "    name=\"employee_agent\",\n",
     "    instructions=\"\"\"\n",
     "    You are an HR Assistant for Contoso Electronics specializing in employee health plans. Your role is to answer in-depth and technical questions about the two available health plans:\n",
@@ -356,7 +356,7 @@
     "    top_k=3,  # Retrieve top 3 most relevant documents\n",
     ")\n",
     "\n",
-    "agent = client.create_agent(\n",
+    "agent = client.as_agent(\n",
     "    instructions=\"\"\"\n",
     "    You are a helpful assistant tasked with answering the user’s question accurately and concisely. Always consult the available search tool to retrieve relevant information before responding.\n",
     "    Base your answer only on the retrieved content and do not make assumptions.\n",
@@ -390,7 +390,7 @@
     "\n",
     "1. **`ChatAgent`**\n",
     "\n",
-    "This implementation demonstrates the recommended pattern for building production-grade AI agents using AF's `ChatAgent` class. While simpler patterns like `client.create_agent()` exist, `ChatAgent` is the proper foundation for applications requiring stateful orchestration, tool calling capabilities, context provider integration, and multi-turn conversation management.\n",
+    "This implementation demonstrates the recommended pattern for building production-grade AI agents using AF's `ChatAgent` class. While simpler patterns like `client.as_agent()` exist, `ChatAgent` is the proper foundation for applications requiring stateful orchestration, tool calling capabilities, context provider integration, and multi-turn conversation management.\n",
     "\n",
     "2. **`async`**\n",
     "\n",
