Fix output indexing in workflow notebook to correctly display the first event output.

--- a/02-workflows/02.1-intro-workflows.ipynb
+++ b/02-workflows/02.1-intro-workflows.ipynb
@@ -588,7 +588,7 @@
     "    ChatMessage(role=\"user\", text=\"Create a slogan for a new electric SUV that is affordable and fun to drive.\")\n",
     ")\n",
     "\n",
-    "print(f\"Outputs: {events.get_outputs()}\")\n",
+    "print(f\"Outputs: {events.get_outputs()[0]}\")\n",
     "print(f\"State: {events.get_final_state()}\")"
    ]
   },
