chore: update deps and improve RAG notebooks with new fundamentals and context provider examples

--- a/02-workflows/02.1-intro-workflows.ipynb
+++ b/02-workflows/02.1-intro-workflows.ipynb
@@ -334,6 +334,32 @@
   },
   {
    "cell_type": "markdown",
+   "id": "understanding-events",
+   "metadata": {},
+   "source": [
+    "#### Understanding Workflow Events\n",
+    "\n",
+    "When you run a workflow with `workflow.run()`, it returns an events collection that you can iterate and inspect. For agent-based workflows, each agent emits an `AgentRunEvent` when it completes.\n",
+    "\n",
+    "**`AgentRunEvent` Properties:**\n",
+    "\n",
+    "| Property | Type | Description |\n",
+    "|----------|------|-------------|\n",
+    "| `executor_id` | `str` | The name/ID of the agent that produced this output |\n",
+    "| `data` | `Any` | The agent's response (typically the text output) |\n",
+    "\n",
+    "**Events Collection Methods:**\n",
+    "\n",
+    "| Method | Returns | Description |\n",
+    "|--------|---------|-------------|\n",
+    "| `get_outputs()` | `list` | Final outputs from terminal executors (those that called `yield_output`) |\n",
+    "| `get_final_state()` | `WorkflowRunState` | The workflow's final state (e.g., `IDLE`, `FAILED`) |\n",
+    "\n",
+    "This pattern is essential for debugging multi-agent workflows - you can see exactly what each agent produced and trace the flow of information through your pipeline."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3ced64bf",
    "metadata": {},
    "source": [
