Chapter 4 - final content for 4.1 and 4.2 ready for review

--- a/04-human-in-the-loop/04.1-hitl-intro.ipynb
+++ b/04-human-in-the-loop/04.1-hitl-intro.ipynb
@@ -55,6 +55,7 @@
    "id": "97acafcc",
    "metadata": {},
    "source": [
+    "---\n",
     "### Setup\n",
     "\n",
     "First, let's validate our environment and create the Azure OpenAI client."
@@ -93,7 +94,7 @@
    "id": "c016840d",
    "metadata": {},
    "source": [
-    "## Example 1: Simple Approval Flow\n",
+    "### Example 1: Simple Approval Flow\n",
     "\n",
     "We'll create an email agent with two functions:\n",
     "- `send_email_notification` - executes automatically\n",
@@ -598,7 +599,7 @@
    "id": "3c88c764",
    "metadata": {},
    "source": [
-    "#### Step 3 - Build the Workflow and Implement the Approval Loop\n",
+    "#### Step 2 - Build the Workflow and Implement the Approval Loop\n",
     "Now let's assemble all the parts into a complete workflow and implement the human-in-the-loop approval mechanism. In the following section you will need to build the workflow and handle response requests yourself:"
    ]
   },
@@ -844,7 +845,6 @@
     "| **Conversation Flow** | Check `result.user_input_requests`, create response with `.create_response(approved)`, resume with full history |\n",
     "| **Content Types** | `TextContent` (plain text), `FunctionCallContent` (tool invocation), `FunctionResultContent` (tool output), `FunctionApprovalRequestContent` (approval request), `FunctionApprovalResponseContent` (approval decision) |\n",
     "\n",
-    "### Chapter 2 Complete!\n",
     "\n",
     "You now have the skills to build:\n",
     "- Human-in-the-loop approval patterns for specific operations\n",
@@ -852,7 +852,7 @@
     "- Interactive approval loops for production systems\n",
     "- Conversation history overview and management\n",
     "\n",
-    "In **Chapter 3**, you'll learn about **advanced HITL patterns in Workflows** to give you full control of agent actions!"
+    "In **Section 4.2**, you'll learn about **advanced HITL patterns in Workflows** to give you full control of agent actions!"
    ]
   }
  ],
